# OSLOthema-KVS

./: CHANGELOG  KVS-IMPL.eap  README.md  stakeholders.csv
resources/swagger/R1/klant-volg-systeem-release-1-client/: README.md  main.py  pyproject.toml
resources/swagger/R1/klant-volg-systeem-release-1-client/klant_volg_systeem_release_1_client/: __init__.py
resources/swagger/R1/klant-volg-systeem-release-1-client/klant_volg_systeem_release_1_client/models/: __init__.py  activeringstraject.py  activeringstraject_activeringstraject_einddatum.py  activeringstraject_activeringstraject_einddatum_type.py  activeringstraject_activeringstraject_heeft_participatie_item.py  activeringstraject_activeringstraject_naam.py  activeringstraject_activeringstraject_naam_language.py  activeringstraject_activeringstraject_startdatum.py  activeringstraject_activeringstraject_startdatum_type.py  activeringstraject_activeringstraject_status.py  activeringstraject_activeringstraject_status_id.py  activeringstraject_activeringstraject_status_skos_pref_label.py  activeringstraject_activeringstraject_status_skos_pref_label_language.py  activeringstraject_activeringstraject_status_skos_pref_label_value.py  activeringstraject_type.py  adresvoorstelling.py  adresvoorstelling_adresvoorstelling_busnummer.py  adresvoorstelling_adresvoorstelling_gemeentecode.py  adresvoorstelling_adresvoorstelling_gemeentenaam.py  adresvoorstelling_adresvoorstelling_gemeentenaam_language.py  adresvoorstelling_adresvoorstelling_huisnummer.py  adresvoorstelling_adresvoorstelling_land.py  adresvoorstelling_type.py  (+112 more)
(+338 files in other folders)
